--- a/src/app/admin/add-edit-weight/add-edit-weight.component.css
+++ b/src/app/admin/add-edit-weight/add-edit-weight.component.css
@@ -17,13 +17,17 @@ textarea {
 
 }
 
-mat-toolbar {
+element.style {
+}
+mat-toolbar[_ngcontent-kht-c166] {
     height: 40px;
-    margin-bottom:-25px;
-    background: none;
-    color: #f4f8f8;
+    margin-bottom: -15px;
     padding: 0px;
+    background: none;
     position: relative;
     top: -25px;
+    width: 125%;
+    left: -25px;
+    color: whitesmoke;
     background-color: #14595c;
 }
