--- a/src/app/admin/add-edit-weight/add-edit-weight.component.html
+++ b/src/app/admin/add-edit-weight/add-edit-weight.component.html
@@ -15,11 +15,11 @@
             <textarea class="textarea" formControlName="weight_description" matInput
                 placeholder=" Description"></textarea>
         </mat-form-field><br>
-        <input formControlName="admin_id_fk" ngModel={{admin_id}} readonly hidden >
+        <input formControlName="admin_id_fk" ngModel={{admin_id}} readonly  hidden type="number">
     </form>
 </div>
 <div mat-dialog-action [align]="'end'">
-    <button mat-raised-button color="warn" (click)="resetUnit()" class="reset_btn">Reset</button>
+    <button mat-raised-button color="warn" class="reset_btn" (click)="reset_form()">Reset</button>
     <button mat-raised-button (click)="onSubmit()" class="add_btn" type="submit"
         [disabled]="!addWeight.valid">{{actionBtn}}</button>
 </div>
