--- a/src/app/admin/category/category.component.html
+++ b/src/app/admin/category/category.component.html
@@ -3,7 +3,7 @@
   <mat-icon id="add_cat" (click)="add_category()">add_circle</mat-icon>
 </div>
 <div class="count_search">
-  <span class="notice_text"> Total :</span>
+  <span class="notice_text"> Total : {{cat_count}}</span>
   <div class="search">
     <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
   </div>
@@ -12,14 +12,13 @@
   <form>
     <div class="mat-elevation-z8">
       <table mat-table [dataSource]="dataSource" matSort id="table">    
-        <ng-container matColumnDef="slno">
+        <ng-container matColumnDef="cat_id">
           <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
           <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex * paginatorRef.pageSize)+(i+1)}}</td>
         </ng-container>    
         <ng-container matColumnDef="cat_name">
           <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header> Category</th>
-          <td  class="data"mat-cell *matCellDef="let row"
-          >{{row.cat_name}}</td>
+          <td  class="data"mat-cell *matCellDef="let row">{{row.cat_name}}</td>
         </ng-container>
         <ng-container matColumnDef="cat_desc">
           <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
