--- a/src/app/admin/add-edit-purchase/add-edit-purchase.component.html
+++ b/src/app/admin/add-edit-purchase/add-edit-purchase.component.html
@@ -2,16 +2,16 @@
 	<span class="notice_text">{{action_text}}</span>
 </div>
 
-<nav ngbNav #nav="ngbNav" class="nav-tabs">
+<nav ngbNav #nav="ngbNav" class="nav-tabs" style=" height:46px; ">
 	<ng-container ngbNavItem>
-		<a ngbNavLink style="background-color:#05363c; border-radius: 5px; height:37px;color: whitesmoke; "
-			(click)="party()">Party</a>
+		<a ngbNavLink 
+			(click)="party()" style="background-color: #0b4648; height: 37px; color: white; border-radius: 5px; font-size: 16px;">Party</a>
 		<ng-template ngbNavContent>
 			<div class="content_area">
 				<form [formGroup]="saleform">
 					<div class="column">
 						<input type="number" formControlName="cust_id" readonly hidden>
-						<mat-form-field appearance="fill">
+						<mat-form-field appearance="fill" style="margin-top: 28px;">
 							<mat-label>Customer Id</mat-label>
 							<input formControlName="cust_id" matInput placeholder="Customer Id">
 						</mat-form-field>
@@ -39,20 +39,20 @@
 					</div>
 				</form>
 				<div mat-dialog-action [align]="'end'">
-					<button mat-raised-button (click)="onSubmit()" class="add_btn" type="submit"
+					<button mat-raised-button (click)="onSubmit()" class="add_btn" style="background-color: #0b4648; width: 140px; color: whitesmoke;" type="submit" 
 						[disabled]="!saleform.valid">{{actionBtn}}</button>
 				</div>
 			</div>
 		</ng-template>
 	</ng-container>
 	<ng-container ngbNavItem>
-		<a ngbNavLink style="background-color:#05363c; border-radius: 5px; color: whitesmoke; height:37px;" (click)="item()">Item</a>
+		<a ngbNavLink style="background-color:#05363c; border-radius: 5px; font-size: 18px; color: whitesmoke; height:37px; font-family: Cambria;" (click)="item()">Item</a>
 		<ng-template ngbNavContent>
-			<div class="content_area">
+			<div class="content_area" >
 				<form [formGroup]="saleform">
 					<div class="column">
 						<!-- <input type="number" formControlName="cust_id" readonly> -->
-						<mat-form-field appearance="fill">
+						<mat-form-field appearance="fill" style="margin-top: 20px;">
 							<mat-label>Customer</mat-label>
 							<input formControlName="cust_name" matInput placeholder="Name">
 						</mat-form-field>
@@ -65,7 +65,7 @@
 						</mat-form-field>
 
 						<mat-form-field appearance="fill">
-							<mat-label>Item</mat-label>
+							<mat-label >Item</mat-label>
 							<input formControlName="Item_name" matInput placeholder="Item Name">
 						</mat-form-field>
 
@@ -104,15 +104,16 @@
 							<input formControlName="net_rate" matInput placeholder="Net Rate">
 						</mat-form-field><br>
 
-						<mat-form-field appearance="fill">
+						<mat-form-field appearance="fill" style="margin-left: -822px;">
 							<mat-label>Amount</mat-label>
 							<input formControlName="amount" matInput placeholder="Amount">
 						</mat-form-field><br>
 					</div>
 				</form>
 				<div mat-dialog-action [align]="'end'">
-					<button  mat-raised-button (click)="onSubmit()" class="add_btn" type="submit"
+					<button  mat-raised-button (click)="onSubmit()" class="add_btn" style="margin-top: 39px; background-color:#0b4648; color: white;"  type="submit"
 						[disabled]="!saleform.valid">{{action_Btn}}</button>
+						
 				</div>
 			</div>
 			<div class="cotainer">
@@ -137,8 +138,8 @@
 						<td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editItem(row)">edit</mat-icon></td>
 					  </ng-container> -->
 						<!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+							<tr class="mat-row" *matNoDataRow>
 					  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>     
-					  <tr class="mat-row" *matNoDataRow>
 						<td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
 					  </tr> -->
 						<!-- </table>     -->
@@ -152,7 +153,7 @@
 		</ng-template>
 	</ng-container>
 	<ng-container ngbNavItem><br>
-		<a ngbNavLink (click)="final_bill()" style="background-color:#05363c; border-radius: 5px;color: whitesmoke; height:37px" >Final bill</a>
+		<a ngbNavLink (click)="final_bill()" style=" font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 17px; background-color:#05363c; border-radius: 5px;color: whitesmoke; height:37px" >Final bill</a>
 		<button id="billnobtn">Bill Ref.No:VE/0/22-23</button>
 		<ng-template ngbNavContent>
 			<div class="content_area">
@@ -227,8 +228,8 @@
 						</mat-form-field>
 					</div>
 					<div mat-dialog-action [align]="'end'">
-						<button mat-raised-button (click)="finalsubmit()" class="submitbtn" type="submit"
-							[disabled]="!saleform.valid">{{actionBtn}}</button>
+						<button mat-raised-button (click)="finalsubmit()"class="submitbtn"  type="submit"
+							[disabled]="!saleform.valid"><p>Final Submit</p></button>
 					</div>
 				</form>
 			</div>
