--- a/src/app/admin/add-edit-sale/add-edit-sale.component.css
+++ b/src/app/admin/add-edit-sale/add-edit-sale.component.css
@@ -18,9 +18,12 @@
 
 .add_btn {
     height: 40px;
-    background-color: #0d5e58;
-    margin-right: 500px;
+    margin-right: 600px;
     margin-top: 10px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    word-spacing: 4px;
+    font-size: 18px;
+    cursor: pointer;
 }
 
 .notice_text {
@@ -64,18 +67,18 @@ mat-form-field {
 }
 
 .textarea_box {
-    width: 75%;
+    width: 64.2%;
 }
 
 .content_area {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 65px;
 }
 
 .date_box {
     width: 200px;
     float: left;
-    margin-left: 140px;
+    margin-left: 225px;
 }
 
  ng-container a {
@@ -98,7 +101,9 @@ mat-form-field {
 #billnobtn{
     position: absolute;
     right: 10px;
-    top:140px;
+    top:139px;
+    margin-right: -6px;
+    height: 37px;
 }
 
 a{
