--- a/src/app/admin/add-edit-sale/add-edit-sale.component.html
+++ b/src/app/admin/add-edit-sale/add-edit-sale.component.html
@@ -2,7 +2,7 @@
 	<span class="notice_text">{{action_text}}</span>
 </div>
 
-<nav ngbNav #nav="ngbNav" class="nav-tabs">
+<nav ngbNav #nav="ngbNav" class="nav-tabs" style="height: 46px;">
 	<ng-container ngbNavItem>
 		<a ngbNavLink style="background-color:#05363c; border-radius: 5px; height:37px;color: whitesmoke; "
 			(click)="cus()">Customer</a>
@@ -39,7 +39,7 @@
 					</div>
 				</form>
 				<div mat-dialog-action [align]="'end'">
-					<button mat-raised-button (click)="onSubmit()" class="add_btn" type="submit"
+					<button mat-raised-button (click)="onSubmit()" class="add_btn" type="submit" style="background-color: #0d5e58; color: white;"
 						[disabled]="!saleform.valid">{{actionBtn}}</button>
 				</div>
 			</div>
