--- a/src/app/admin/gst/gst.component.html
+++ b/src/app/admin/gst/gst.component.html
@@ -21,14 +21,14 @@
           <td  class="data"mat-cell *matCellDef="let row">{{row.gst_in_percentage}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="gst_cgst">
+        <ng-container matColumnDef="cgst_in_percentage">
           <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>CGST(%)</th>
-          <td class="data" mat-cell *matCellDef="let row">{{row.gst_cgst}}</td>
+          <td class="data" mat-cell *matCellDef="let row">{{row.cgst_in_percentage}}</td>
         </ng-container>
 
-        <ng-container matColumnDef="gst_sgst">
+        <ng-container matColumnDef="sgst_in_percentage">
           <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SGST(%)</th>
-          <td class="data" mat-cell *matCellDef="let row">{{row.gst_sgst}}</td>
+          <td class="data" mat-cell *matCellDef="let row">{{row.sgst_in_percentage}}</td>
         </ng-container>  
 
         <ng-container matColumnDef="gst_des">
