--- a/src/app/admin/customer/customer.component.html
+++ b/src/app/admin/customer/customer.component.html
@@ -18,6 +18,11 @@
             paginatorRef.pageSize)+(i+1)}}</td>
         </ng-container>
 
+        <ng-container matColumnDef="cust_name">
+          <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+          <td class="data" mat-cell *matCellDef="let row">{{row.cust_name}}</td>
+        </ng-container>
+
         <ng-container matColumnDef="cust_shop_name">
           <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Shop Name</th>
           <td class="data" mat-cell *matCellDef="let row">{{row.cust_shop_name}}</td>
