--- a/src/app/admin/employee/employee.component.html
+++ b/src/app/admin/employee/employee.component.html
@@ -1,55 +1,55 @@
 <div class="view_notice">
-    <span class="notice_text">Manage Employee</span>
-    <mat-icon id="add_item" (click)="add_Employee()">add_circle</mat-icon>
+  <span class="notice_text">Manage Employee</span>
+  <mat-icon id="add_item" (click)="add_Employee()">add_circle</mat-icon>
+</div>
+<div class="count_search">
+  <span class="notice_text"> Total :</span>
+  <div class="search">
+    <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
   </div>
-  <div class="count_search">
-    <span class="notice_text"> Total :</span>
-    <div class="search">
-      <input matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
-    </div>
-  </div>
-  <div class="cotainer">
-    <form>
-      <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort id="table">    
-          <ng-container matColumnDef="slno">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
-            <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex * paginatorRef.pageSize)+(i+1)}}</td>
-          </ng-container>    
-          <ng-container matColumnDef="emp_name">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Employee Name</th>
-            <td  class="data"mat-cell *matCellDef="let row">{{row.emp_name}}</td>
-          </ng-container>
-          <ng-container matColumnDef="emp_mobile">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile Number</th>
-            <td class="data" mat-cell *matCellDef="let row">{{row.emp_mobile}}</td>
-          </ng-container> 
-          <ng-container matColumnDef="emp_adhar_no">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Adhar Number</th>
-            <td  class="data"mat-cell *matCellDef="let row">{{row.emp_adhar_no}}</td>
-          </ng-container>          
-          <ng-container matColumnDef="emp_address">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
-            <td  class="data"mat-cell *matCellDef="let row">{{row.emp_address}}</td>
-          </ng-container>
+</div>
+<div class="cotainer">
+  <form>
+    <div class="mat-elevation-z8">
+      <table mat-table [dataSource]="dataSource" matSort id="table">    
+        <ng-container matColumnDef="slno">
+          <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>SL NO.</th>
+          <td class="data" mat-cell *matCellDef="let row; let i = index;">{{(paginatorRef.pageIndex * paginatorRef.pageSize)+(i+1)}}</td>
+        </ng-container>    
+        <ng-container matColumnDef="emp_name">
+          <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Employee Name</th>
+          <td  class="data"mat-cell *matCellDef="let row">{{row.emp_name}}</td>
+        </ng-container>
+        <ng-container matColumnDef="emp_mobile">
+          <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Mobile Number</th>
+          <td class="data" mat-cell *matCellDef="let row">{{row.emp_mobile}}</td>
+        </ng-container> 
+        <ng-container matColumnDef="emp_aadhar_no">
+          <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Adhar Number</th>
+          <td  class="data"mat-cell *matCellDef="let row">{{row.emp_aadhar_no}}</td>
+        </ng-container>          
+        <ng-container matColumnDef="emp_address">
+          <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Address</th>
+          <td  class="data"mat-cell *matCellDef="let row">{{row.emp_address}}</td>
+        </ng-container>
 
-          <ng-container matColumnDef="emp_image">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header> Image</th>
-            <td mat-cell *matCellDef="let row"><img src="{{row.emp_image}}" width="35px" height="35px"></td>
-          </ng-container>  
-           
-          <ng-container matColumnDef="Action">
-            <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
-            <td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editEmp(row)">edit</mat-icon></td>
-          </ng-container>
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>     
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
-          </tr>
-        </table>    
-        <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
-      </div>    
-    </form>
-  </div>
+        <ng-container matColumnDef="emp_photo">
+          <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Image</th>
+          <td mat-cell *matCellDef="let row"><img src="{{row.emp_image}}" width="35px" height="35px"></td>
+        </ng-container>  
+         
+        <ng-container matColumnDef="Action">
+          <th class="trth" mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
+          <td class="data" mat-cell *matCellDef="let row"> <mat-icon (click)="editEmp(row)">edit</mat-icon></td>
+        </ng-container>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>     
+        <tr class="mat-row" *matNoDataRow>
+          <td class="mat-cell" colspan="4">No data show"{{input.value}}"</td>
+        </tr>
+      </table>    
+      <mat-paginator #paginatorRef [pageSizeOptions]="[10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    </div>    
+  </form>
+</div>
 
