--- a/src/app/admin/add-edit-item/add-edit-item.component.html
+++ b/src/app/admin/add-edit-item/add-edit-item.component.html
@@ -25,14 +25,14 @@
                 </mat-select>
             </mat-form-field>
 
-            <mat-form-field appearance="fill">
+            <mat-form-field appearance="fill" id="weight">
                 <mat-label>Weight</mat-label>
                 <mat-select formControlName="item__id_fk">
                     <!-- <mat-option *ngFor="let roledata of roledata" [value]="roledata.role_id">{{roledata.role_name}}</mat-option> -->
                 </mat-select>
             </mat-form-field>
         </div>
-        <div class="column">
+        <div class="column" id="column_1">
             <mat-form-field appearance="fill">
                 <mat-label>Size</mat-label>
                 <mat-select formControlName="item_unit_id_fk">
