--- a/src/app/admin/add-edit-category/add-edit-category.component.css
+++ b/src/app/admin/add-edit-category/add-edit-category.component.css
@@ -8,18 +8,22 @@
 }
 .example-spacer {
     flex: 1 1 auto;
+    color: rgb(20,89,92);
+    margin-bottom: 20px;}
+.material-icons{
+    color: rgb(20,89,92);
+    margin-bottom: 20px;
 }
 textarea{
     height: 18px;
  } 
 mat-toolbar{
     height: 40px;
-    margin-bottom:-25px;
+    /* margin-bottom: 20px; */
     padding: 0px;
     background: none;
     position: relative;
-    top: -25px;
     color:whitesmoke;
-    background-color:#14595c;
+    /* background-color:#14595c; */
 }
 
