--- a/src/app/admin/add-edit-party/add-edit-party.component.css
+++ b/src/app/admin/add-edit-party/add-edit-party.component.css
@@ -5,13 +5,23 @@
     float: left;
 
   }
+  .column_1 mat-form-field{
+    width: 400px;
+    margin-top: 5px;
+  }
   textarea {
     height: 18px;      
   } 
 
   .example-spacer {
     flex: 1 1 auto;
+    margin-bottom: 20px;
+    color: rgb(20,89,92);
   }  
+  .material-icons{
+    color: rgb(20,89,92);
+    margin-bottom: 20px;
+  }
   .reset_btn {
     width:80px;
     height: 40px;
@@ -32,15 +42,137 @@
   } 
   mat-toolbar {
     height: 40px;
-    margin-bottom:-20px;
     background: none;
     color: #f4f8f8;
     padding:0px;
     position: relative;
-    top:-25px;
-    background-color:#14595c;
+    /* background-color:#14595c; */
   }
 
   mat-icon {
     float: right;
+  }
+  @media (min-width:1200px) and (max-width:2000px){
+    .column_1 mat-form-field {
+      width: 99%;
+    }
+    .reset_btn {
+      width:80px;
+      height: 40px;
+      margin-right:180px ;
+  
+    }
+    .add_btn {
+      width: 80px;
+      height: 40px;  
+      background-color: green;
+      color: whitesmoke; 
+      margin-right:150px ;   
+   
+    } 
+  }
+
+
+  @media (min-width:768px) and (max-width:1200px){
+    .column{
+      width: 100%;
+      height: auto; 
+      display: flex;
+    }
+    .column mat-form-field{
+      width: 30.5%;
+      margin-left: 2%;
+    }
+   
+    .column_1{
+      width: 96%;
+      margin-left: 2%;
+    }
+    .column_1 mat-form-field{
+      width: 100%;
+      margin-top: 2px;
+    }
+   
+    .reset_btn{
+      width: 30%;
+      float: left;
+      margin: 0px;
+      margin-left: 10%;
+      margin-top: -18px;
+
+    }
+    .add_btn{
+      width: 30%;
+      float: right;
+      margin: 0px;
+     margin-right: 10%;
+     margin-top: -18px;
+    }
+  }
+
+  @media (min-width:521px) and (max-width:767px){
+    .column{
+      width: 100%;
+      height: auto;
+      
+    }
+    .column mat-form-field{
+      width: 100%;
+    }
+    .column_1{
+      width: 100%;
+      height: auto;
+    }
+    .column_1 mat-form-field{
+      width: 100%;
+    }
+   
+    .reset_btn{
+      width: 30%;
+      float: left;
+      margin: 0px;
+      margin-left: 10%;
+      margin-top: -18px;
+
+    }
+    .add_btn{
+      width: 30%;
+      float: right;
+      margin: 0px;
+     margin-right: 10%;
+     margin-top: -18px;
+    }
+   
+  }
+  @media (max-width:520px){
+    .column{
+      width: 100%;
+      height: auto;
+    }
+    .column mat-form-field{
+      width: 100%;
+    }
+    .column_1{
+      width: 100%;
+      height: auto;
+    }
+    .column_1 mat-form-field{
+      width: 100%;
+    }
+    .reset_btn{
+      width: 30%;
+      float: left;
+      margin: 0px;
+      margin-left: 10%;
+      margin-top: -18px;
+
+    }
+    .add_btn{
+      width: 30%;
+      float: right;
+      margin: 0px;
+     margin-right: 10%;
+     margin-top: -18px;
+    }
+   
   }
