--- a/src/app/admin/add-edit-unit/add-edit-unit.component.css
+++ b/src/app/admin/add-edit-unit/add-edit-unit.component.css
@@ -8,19 +8,27 @@
 }
 .example-spacer {
     flex: 1 1 auto;
+    margin-bottom: 20px;
+    color: rgb(20,89,92);
+    /* font-size: 15px; */
 }
+.material-icons{
+    color: rgb(20,89,92);
+    margin-bottom: 20px;
+}
+
 textarea{
     height: 18px;
       
  } 
  mat-toolbar {   
     height: 40px;
-    margin-bottom:-25px ;
+    /* margin-bottom: 20px ; */
     background: none;
-    color: #f4f8f8;
+    /* color: #f4f8f8; */
     padding: 0px;
     position: relative;
-    top: -25px;   
-    background-color:#14595c;   
+    /* top: -25px;    */
+    /* background-color:#14595c;    */
   }
 
