--- a/src/app/admin/dashboard/dashboard.component.css
+++ b/src/app/admin/dashboard/dashboard.component.css
@@ -1,5 +1,6 @@
 .main_thumbnail {
   padding-right: 20px;
+  /* padding-top: 57px; */
 }
 
 .thumbnail {
@@ -12,6 +13,7 @@
   margin-top: 20px;
   margin-left: 20px;
 }
+
 
 mat-icon {
   width: 40px;
@@ -36,9 +38,32 @@ mat-icon {
   text-shadow: 1px 1px 1px rgb(112, 110, 110);
   text-align: left;
 }
-/* 
+
 @media(min-width:920px)and (max-width:1199px) {
   .main_thumbnail {
+    padding-right: 0px;
+  }
+  .thumbnail {
+    width: 27%;
+    height: 100px;
+    float: left;
+    margin-top: 5%;
+    margin-left: 5%;
+
+  }
+  .thumbnail span {
+    font-size: 20px;
+    line-height: 25px;
+    margin-left: 10px;
+  }
+  mat-icon {
+    width: 30px;
+    height: 30px;
+    font-size: 30px;   
+    margin-top: 35px;
+  }
+  
+  /* .main_thumbnail {
     padding-right: 10px;
   }
 
@@ -57,27 +82,59 @@ mat-icon {
   .thumbnail span {
     line-height: 15px;
 
-  }
-
-} */
-/* @media(min-width:720px)and (max-width:919px) {
-  .thumbnail {
-    width: 100%;
-    height: 100px;   
-    margin: 10px 10px 0px;
-  }
+  } */
 
 }
-
-@media(min-width:420px)and (max-width:719px) {
+@media(min-width:768px)and (max-width:919px) {
+  .main_thumbnail {
+    padding-right: 0px;
+  }
   .thumbnail {
-    width: 100%;
+    width: 43%;
     height: 100px;
     float: left;
-    margin-top: 10px;
-    margin-left: 10px;
+    margin-top: 5%;
+    margin-left: 5%;
 
   }
+  .thumbnail span {
+    font-size: 20px;
+    line-height: 25px;
+    margin-left: 10px;
+  }
+  mat-icon {
+    width: 30px;
+    height: 30px;
+    font-size: 30px;   
+    margin-top: 35px;
+  }
+  
+}
+
+@media(min-width:420px)and (max-width:767px) {
+  .main_thumbnail {
+    padding-right: 0px;
+  }
+  .thumbnail {
+    width: 90%;
+    height: 100px;
+    float: left;
+    margin-top: 5%;
+    margin-left: 5%;
+
+  }
+  .thumbnail span {
+    font-size: 20px;
+    line-height: 25px;
+    margin-left: 10px;
+  }
+  mat-icon {
+    width: 30px;
+    height: 30px;
+    font-size: 30px;   
+    margin-top: 35px;
+  }
+  
 }
 
 @media(max-width:420px) {
@@ -93,14 +150,15 @@ mat-icon {
 
   }
   .thumbnail span {
-    font-size: 20px;
+    font-size: 15px;
     line-height: 25px;
     margin-left: 10px;
   }
 
   mat-icon {
-    width: 30px;
-    height: 30px;
-    font-size: 30px;   
+    width: 25px;
+    height: 25px;
+    font-size: 25px;   
+    margin-top: 35px;
   }
-} */
+}
