--- a/src/app/admin/gst/gst.component.css
+++ b/src/app/admin/gst/gst.component.css
@@ -8,7 +8,7 @@
     padding: 10px;
     box-sizing: border-box;
 }
-#add_item{
+#add_gst{
     position: relative;
     top: -5px;
     left: 2px;
@@ -16,6 +16,7 @@
 }
 .notice_text{
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 .count_search{
     height: 40px;
@@ -35,6 +36,7 @@
     top: -5px;
     left: 0px;
 }
+
 mat-icon{
     background-color: transparent;
     border: none;
