--- a/src/app/admin/sidebar/sidebar.component.css
+++ b/src/app/admin/sidebar/sidebar.component.css
@@ -1,8 +1,12 @@
 .top {
     width: 100%;
-    height: 62px;  
+    height: 62px; 
+    /* z-index: 9; */
+    /* background-color: rgb(20,89,92);   */
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.5); 
-    z-index: 100;  
+    /* position: fixed; */
+    /* top: 0px; */
+
 } 
 .title_text {
     color: whitesmoke;
@@ -10,8 +14,13 @@
     position: relative;
     top:20px;
     margin-left:20px;
-
 }
+/* .menu{
+    width: 100%;
+    height: auto;
+    margin-top: 69px;
+    position: relative;
+} */
 .menu-button {
     width: 100%;
     font-size: 16px;
@@ -19,6 +28,8 @@
     margin-top:7px;
     display: flex;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;     
+    
+    
 }
 
 .menu-button span {
@@ -31,6 +42,7 @@
 }
 .active{
     background-color:#05363c;
+    z-index: 6;
 }
 
 .menu-button:focus {
@@ -56,6 +68,9 @@
   button:hover{
     padding-left: 25px;
   }
+
+
+
 
 /* @media(max-width:420px){
     img {       
