--- a/src/app/admin/add-edit-sale/add-edit-sale.component.css
+++ b/src/app/admin/add-edit-sale/add-edit-sale.component.css
@@ -15,6 +15,9 @@
     left: 2px;
     cursor: pointer;
 }
+.text_amount{
+    margin-right: 830px;
+}
 
 .add_btn {
     height: 40px;
@@ -81,18 +84,34 @@ mat-form-field {
     margin-left: 225px;
 }
 
+
  ng-container a {
     background-color: #05363c;
 } 
-
+/* =============================================Button============================================================ */
 .submitbtn {
     width: 100px;
     height: 35px;
     background-color: #0b4648;
     float: left;
-    margin-top: 20px;
+    margin-top: 90px;
+}
+.submitbtn p{
+    width: 130px;
+    height: 40px;
+    border-radius: 5px;
+    color: white;
+    line-height: 40px;
+    cursor: pointer;
+    margin-left: -20px;
+    font-size: 18px;
+    word-spacing: 4px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: #0b4648;
 }
 
+
+/* =========================================================================================================================== */
 .customer_btn {
     background-color: #05363c;
     border-radius: 5px;
@@ -121,9 +140,15 @@ a{
 
 */
 .item_add_btn{
-    background-color: #0a4547;
+    margin-right: 599px;
+    margin-top: 5px;
+    width: 80px;
+    height: 40px;
+    font-size: 18px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    cursor: pointer;
+ 
 }
-
 
 #table {
     font-family: Arial, Helvetica, sans-serif;
