--- a/src/app/admin/account/account.component.css
+++ b/src/app/admin/account/account.component.css
@@ -91,3 +91,12 @@ ng-container {
 .data:hover {
     color: white;
 }
+@media (max-width: 700px) {
+    .trth{
+        width: 100%;
+        
+    }
+    .data{
+        width: 100%;
+    }
+}
