--- a/src/app/admin/add-edit-employee/add-edit-employee.component.css
+++ b/src/app/admin/add-edit-employee/add-edit-employee.component.css
@@ -1,55 +1,53 @@
 .column {
-    margin-right:5px;
-    width:200px;
-    height:200px;
-    float: left;   
-  }
-   textarea{
-    height: 18px;   
-  }
-  
-  .example-spacer {
-    flex: 1 1 auto;
-  }
-  .reset_btn {
-    width: 100px;
-    height: 40px;
-    /* margin-right:50px;    */
-    
-  }
-   .add_btn {
-    width: 100px;
-    height: 40px;  
-    background-color: green;
-    color: white; 
-    /* margin-right:600px; */
-  } 
-  mat-toolbar {
-    height: 40px;
-    background: none;
-    margin-bottom:-20px;
-    color:whitesmoke;
-    padding: 0px;
-    position: relative;
-    top:-25px;
-    background-color:#14595c; 
-  }
-  .upload_box {
-    width: 200px;
-    height: 53px;
-    /* border: 0.5px solid rgb(228, 226, 226); */
-    border-bottom:0.5px solid rgb(228, 226, 226); 
-    /* border-radius: 5px;     */
-    margin-bottom: 25px; 
-    overflow: hidden;
-  }
-  .upload_box button {
-    width: 100px;
-    height: 44px;
-    margin: 3px;
-  }
-  .upload_box:hover{
-    border: 2px solid black;
+  margin-right:5px;
+  width:200px;
+  height:200px;
+  float: left;   
+}
+ textarea{
+  height: 18px;   
+}
 
-  }
- 
+.example-spacer {
+  flex: 1 1 auto;
+}
+.reset_btn {
+  width: 100px;
+  height: 40px;
+  margin-top: 28px;
+  
+}
+ .add_btn {
+  width: 100px;
+  height: 40px;  
+  background-color: green;
+  color: white; 
+  /* margin-right:600px; */
+} 
+mat-toolbar {
+  height: 40px;
+  background: none;
+
+  color:#14595c; 
+  padding: 0px;
+  position: relative;
+  top:-10px;
+}
+.upload_box {
+  width: 200px;
+  height: 53px;
+  /* border: 0.5px solid rgb(228, 226, 226); */
+  border-bottom:0.5px solid rgb(228, 226, 226); 
+  /* border-radius: 5px;     */
+  margin-bottom: 25px; 
+  overflow: hidden;
+}
+.upload_box button {
+  width: 100px;
+  height: 44px;
+  margin: 3px;
+}
+.upload_box:hover{
+  border: 2px solid black;
+
+}
