--- a/src/app/admin/add-edit-expense/add-edit-expense.component.css
+++ b/src/app/admin/add-edit-expense/add-edit-expense.component.css
@@ -10,14 +10,16 @@
   .reset_btn {
     width: 80px;
     height: 40px;
-    margin-right:60px;     
+    -moz-box-align: center;
+    float: left;
+    margin-top: 10px;    
   }
   .add_btn {
     width: 80px;
     height: 40px;    
-    margin-right:100px;
     background-color: green;
     color: white;
+    margin-top: 12px;
   }
   .date_box {
     width: 200px;
@@ -25,10 +27,117 @@
   mat-toolbar {
     height:40px;
     background: none;
-    color:whitesmoke;
+    color:#14595c;
     padding: 0px;
     position: relative;
     top: -10px;
-    background-color:#14595c; ;
   }
+  /* ==========================================****** @media******======================================== */
+  @media (max-width: 574px) {
+   .text {
+        width: 350px;
+        margin-left: 20px;
+    } 
+    .date_box{
+      width: 350px;
+      margin-left: 20px;
+    }
+    .reset_btn {
+      margin-left: 51px;
+    }
+    .add_btn {
+      margin-right:70px ;
+    }
+    
+}
+@media (max-width: 420px) {
+  .text {
+       width: 280px;
+
+   } 
+   .date_box{
+     width: 280px;
+  
+   }
+   .reset_btn {
+     margin-left: 6px;
+   }
+   .add_btn {
+     margin-right:1px;
+   }
+   
+}
+@media (max-width: 412px) {
+  .date_box{
+    width: 230px;
+   
+  
+  }
+  .text {
+    width: 230px;
+
+}
+
+}
+@media (max-width: 394px) {
+  .date_box{
+    width: 230px;
+   
+  
+  }
+  .text {
+    width: 230px;
+
+}
+
+}
+@media (max-width: 360px) {
+  .text {
+    width: 219px;
+    margin-left: 2px;
+
+
+} 
+.date_box{
+  width: 219px;
+  margin-left: 2px;
+ 
+
+}
+
+}
+@media (max-width: 375px) {
+  .text {
+    width: 219px;
+
+
+} 
+.date_box{
+  width: 219px;
+ 
+
+}
+.reset_btn {
+float: left;
+}
+.add_btn {
+float: right;
+}
+
+}
+@media (max-width: 280px) {
+  .text {
+    width: 170px;
+    margin:4px ;
+
+
+} 
+.date_box{
+  width: 170px;
+  margin-top: 4px;
+ 
+}
+
+}
+/* ==========================================****** @media End******======================================== */
  
