--- a/src/app/admin/add-edit-item/add-edit-item.component.html
+++ b/src/app/admin/add-edit-item/add-edit-item.component.html
@@ -13,45 +13,45 @@
 
             <mat-form-field appearance="fill">
                 <mat-label>Category</mat-label>
-                <mat-select formControlName="item_unit_id_fk">
-                    <!-- <mat-option *ngFor="let roledata of roledata" [value]="roledata.role_id">{{roledata.role_name}}</mat-option> -->
+                <mat-select formControlName="item_cat_id_fk">
+                    <mat-option *ngFor="let catdata of catdata" [value]="catdata.cat_id">{{catdata.cat_name}}</mat-option>
                 </mat-select>
             </mat-form-field>
 
             <mat-form-field appearance="fill">
                 <mat-label>Unit</mat-label>
-                <mat-select formControlName="item_size_id_fk">
-                    <!-- <mat-option *ngFor="let roledata of roledata" [value]="roledata.role_id">{{roledata.role_name}}</mat-option> -->
+                <mat-select formControlName="item_unit_id_fk">
+                    <mat-option *ngFor="let unitdata of unitdata" [value]="unitdata.unit_id">{{unitdata.unit_name}}</mat-option>
                 </mat-select>
             </mat-form-field>
 
             <mat-form-field appearance="fill" id="weight">
                 <mat-label>Weight</mat-label>
-                <mat-select formControlName="item__id_fk">
-                    <!-- <mat-option *ngFor="let roledata of roledata" [value]="roledata.role_id">{{roledata.role_name}}</mat-option> -->
+                <mat-select formControlName="item_weight_id_fk">
+                    <mat-option *ngFor="let weightdata of weightdata" [value]="weightdata.weight_id">{{weightdata.weight_name}}</mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
         <div class="column" id="column_1">
             <mat-form-field appearance="fill">
                 <mat-label>Size</mat-label>
-                <mat-select formControlName="item_unit_id_fk">
-                    <!-- <mat-option *ngFor="let roledata of roledata" [value]="roledata.role_id">{{roledata.role_name}}</mat-option> -->
+                <mat-select formControlName="item_size_id_fk">
+                    <mat-option *ngFor="let sizedata of sizedata" [value]="sizedata.size_id">{{sizedata.size_name}}</mat-option>
                 </mat-select>
             </mat-form-field>
 
             <mat-form-field appearance="fill">
-                <mat-label>Thickness</mat-label>
-                <input formControlName="item_name" matInput placeholder="Name">
-            </mat-form-field> 
+                <mat-label>GST</mat-label>
+                <mat-select formControlName="item_gst_id_fk">
+                    <mat-option *ngFor="let gstdata of gstdata" [value]="gstdata.gst_id">{{gstdata.gst_in_percentage}}</mat-option>
+                </mat-select>
+            </mat-form-field>           
             <mat-form-field appearance="fill">
                 <mat-label>Rate</mat-label>
                 <input formControlName="item_rate" matInput placeholder="Rate">
-            </mat-form-field>          
-
+            </mat-form-field>
             <input formControlName="admin_id_fk" type="number" ngModel={{admin_id}} readonly hidden>
-        </div>
-       
+        </div>       
     </form>
     <div mat-dialog-action [align]="'end'">
         <button mat-raised-button color="warn" (click)="resetItem()" class="reset_btn">Reset</button>
